--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Patounic com Firebase 🍿</title>
+  <title>patounic 🍿</title>
   <link rel="icon" href="https://media.discordapp.net/attachments/1381522672558669843/1392046188693553262/1333894209119453256.webp?width=86&height=86" />
   <style>
     * {
@@ -143,7 +143,6 @@
       display: block;
       background-size: cover;
       background-position: center;
-
     }
 
     .profile-menu {
