--- a/index.html
+++ b/index.html
@@ -106,27 +106,32 @@
       opacity: 1;
     }
 
-    .search-input-wrapper {
-      display: flex;
-      align-items: center;
-      background-color: #111;
-      border-radius: 6px;
-      padding: 0.3rem 0.6rem;
-    }
+.search-input-wrapper {
+  display: flex;
+  align-items: center;
+  background-color: #111;
+  padding: 0.3rem 0.7rem;
+  border-radius: 20px;
+  margin-left: 0.5rem;
+  display: flex; /* garantir que fique visível */
+}
 
-    .search-input {
-      border: none;
-      background: transparent;
-      outline: none;
-      color: white;
-      padding: 0.4rem;
-    }
+.search-input {
+  border: none;
+  background: transparent;
+  outline: none;
+  color: white;
+  padding: 0.3rem;
+  font-size: 14px;
+}
 
-    .search-submit-icon {
-      cursor: pointer;
-      font-size: 20px;
-      margin-left: 0.5rem;
-    }
+.search-submit-icon {
+  cursor: pointer;
+  font-size: 18px;
+  margin-left: 0.5rem;
+  color: white;
+}
+
 
     .profile-container {
       position: relative;
