--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     }
 
     .popcorn-icon {
-      font-size: 24px;
+      font-size: 1.2rem;
       cursor: pointer;
       opacity: 0.8;
       transition: opacity 0.2s ease;
@@ -122,7 +122,8 @@
   outline: none;
   color: white;
   padding: 0.3rem;
-  font-size: 14px;
+  font-size: 1rem; /* ← Aqui estava errado */
+  width: 150px;     /* ← Define o tamanho da barra */
 }
 
 .search-submit-icon {
