--- a/index.html
+++ b/index.html
@@ -6,6 +6,37 @@
   <title>patounic 🍿</title>
   <link rel="icon" href="https://media.discordapp.net/attachments/1381522672558669843/1392046188693553262/1333894209119453256.webp?width=86&height=86" />
   <style>
+/* Menu dropdown */
+.dropdown-menu {
+  position: absolute;
+  top: 50px;  /* Distância do topo do ícone */
+  left: 0;
+  background-color: #111;
+  border-radius: 8px;
+  padding: 1rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  z-index: 20;
+  display: none;  /* Inicialmente o menu está escondido */
+  width: 150px;
+  transition: opacity 0.3s ease;
+}
+
+.menu-item {
+  padding: 10px;
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+  border-bottom: 1px solid #333;
+}
+
+.menu-item:last-child {
+  border-bottom: none;
+}
+
+.menu-item:hover {
+  background-color: #333;
+}
+
 #register-container {
   background-image: url("https://i.pinimg.com/736x/31/9d/88/319d889cb884fd2bdfce68c7eacc3017.jpg");
   background-size: cover;
@@ -129,6 +160,64 @@
       height: 100vh;
       text-align: center;
     }
+.icon-bar {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; /* Alinha os itens à esquerda */
+  padding: 1rem;
+  background-color: #000;
+  position: absolute; /* Fixa a posição no topo */
+  top: 0;
+  left: 0; /* Garante que o conteúdo fique no topo esquerdo */
+  width: 100%; /* Ocupa toda a largura da tela */
+  z-index: 10;
+  gap: 1rem;
+}
+
+.icon-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* Garante que os ícones fiquem separados */
+  padding: 1rem;
+  background-color: #000;
+  position: fixed; /* Barra fixa no topo */
+  top: 0; /* Fixa no topo */
+  width: 100%; /* Ocupa toda a largura da tela */
+  z-index: 10;
+}
+
+.movie-icon {
+  font-size: 1.5rem; /* Tamanho original do ícone */
+  cursor: pointer;
+  opacity: 0.8;
+  transition: opacity 0.2s ease;
+  position: fixed; /* Fixa o ícone no topo esquerdo */
+  left: 1rem; /* Distância do lado esquerdo */
+  top: 1rem; /* Distância do topo */
+}
+
+.movie-icon img {
+  width: 1.5rem; /* Tamanho do GIF igual ao tamanho do ícone original */
+  height: auto; /* Ajusta a altura automaticamente para manter a proporção */
+  object-fit: contain; /* Assegura que o conteúdo não distorça */
+}
+
+/* Restante do código permanece o mesmo */
+.search-container {
+  display: flex;
+  align-items: center;
+}
+
+.popcorn-icon {
+  font-size: 1.2rem;
+  cursor: pointer;
+  opacity: 0.8;
+  transition: opacity 0.2s ease;
+}
+
+.popcorn-icon:hover {
+  opacity: 1;
+}
 
     .icon-bar {
       display: flex;
@@ -267,6 +356,19 @@
 
   <div id="site-content" style="display: none;">
     <div class="icon-bar" id="icon-bar">
+<div id="movie-icon" class="movie-icon" title="Filmes 🎬">
+  <img src="https://media.discordapp.net/attachments/1382924288213909536/1392386153495265280/814226494367858728.webp?ex=686f5828&is=686e06a8&hm=48c0ba30b4dc6a5bd0417c022431f299c0dd828aa89675a4438824e5f1d407fd&=&animated=true&width=59&height=86" alt="Filmes">
+</div>
+
+<!-- Menu Dropdown -->
+<div id="dropdown-menu" class="dropdown-menu">
+  <!-- Caixa Home -->
+  <div id="home-menu" class="menu-item">Home</div>
+  
+  <!-- Caixa Categoria -->
+  <div id="categoria-menu" class="menu-item">Categoria</div>
+</div>
+
       <div class="search-container" id="search-container">
         <div class="popcorn-icon" id="popcorn-icon" title="Pesquisar 🍿">🍿</div>
       </div>
@@ -526,6 +628,29 @@ btnVoltarLogin.onclick = () => {
     });
 
     popcornIcon.onclick = criarCampoPesquisa;
+
+const movieIcon = document.getElementById("movie-icon");
+const dropdownMenu = document.getElementById("dropdown-menu");
+const homeMenu = document.getElementById("home-menu");
+const categoriaMenu = document.getElementById("categoria-menu");
+
+// Função para mostrar/ocultar o menu
+movieIcon.onclick = (e) => {
+  e.stopPropagation(); // Impede que o clique no ícone feche o menu logo após abrir
+  // Alterna entre mostrar e esconder o menu
+  dropdownMenu.style.display = dropdownMenu.style.display === "block" ? "none" : "block";
+};
+
+// Comportamento para as opções de menu
+homeMenu.onclick = () => {
+  alert("Você clicou em Home!");
+  // Não fecha o menu automaticamente
+};
+
+categoriaMenu.onclick = () => {
+  alert("Você clicou em Categoria!");
+  // Não fecha o menu automaticamente
+};
   </script>
 </body>
 </html>
