--- a/index.html
+++ b/index.html
@@ -265,6 +265,8 @@
   cursor: pointer;
   opacity: 0.8;
   transition: opacity 0.2s ease;
+  position: relative;  /* Ou absolute, dependendo do seu layout */
+  top: 0;  /* Ajuste este valor para mover a pipoca mais para cima */
 }
 
 .popcorn-icon:hover {
