--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     }
 
     #login-container {
-      background-image: url("https://i.pinimg.com/736x/31/9d/88/319d889cb884fd2bdfce68c7eacc3017.jpg");
+      background-image: url("https://media.discordapp.net/attachments/1382924288213909536/1392479462251298856/Picsart_25-07-09_14-16-08-080.jpg?ex=686faf0e&is=686e5d8e&hm=bd883da3315f02791c361632179a0e1a3caea2827c37fc9c3f3ed9e574b2e0dc&=&format=webp&width=967&height=967");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
